site/src/styles/starlight.css
:root {
  --sl-text-h1: 3.5rem;
  --dark-blue: #00262f;
}

:root[data-theme="light"] {
  --logo-text-color: #000000;
  --sl-color-text-accent: #04acd2;
  --sl-color-bg: #f9f9f9;
  --anchor-icon-filter: invert(0);
}

:root[data-theme="dark"] {
  --logo-text-color: #f9f9f9f9;
  --anchor-icon-filter: invert(1);
}

h1 a,
h2 a,
h3 a,
h4 a {
  color: var(--logo-text-color) !important;
}

.social-icons a {
  color: var(--logo-text-color);
}

.site-title {
  gap: 4px;
  color: white;
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a {
  text-decoration: none;
}

h1 > a:hover::after,
h2 > a:hover::after,
h3 > a:hover::after,
h4 > a:hover::after,
h5 > a:hover::after {
  content: "";
  width: 0.75em;
  height: 0.75em;
  margin-left: 5px;
  background-repeat: no-repeat;
  background-size: contain;
  display: inline-block;
  background-image: url("../assets/images/link.svg");
  transform: rotate(135deg);
  filter: var(--anchor-icon-filter);
}

li a[aria-current="page"] {
  color: var(--dark-blue);
}

a[aria-current="true"]
  span[data-astro-source-file$="/starlight/components/TableOfContents/TableOfContentsList.astro"] {
  color: var(--dark-blue);
}
.site-title span {
  color: var(--logo-text-color);
}

* {
  scrollbar-width: 0.01rem;
  scrollbar-color: transparent transparent;
}

*::-webkit-scrollbar {
  width: 0.1rem;
  height: 0.1rem;
  background-color: transparent;
}

*::-webkit-scrollbar-thumb,
*::-webkit-scrollbar-track {
  background-color: transparent;
}

h1 > a {
  font-size: 2.5rem;
}

